--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
+    "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
